--- a/src/mibg3/Agent/AlienInfoAgent.form
+++ b/src/mibg3/Agent/AlienInfoAgent.form
@@ -50,11 +50,6 @@
                               <Component id="returnAlienAnsAgentLabel" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
-                              <Component id="nuvarandePlatsLabel" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="returnAlienNuvPlatsLabel" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
                               <Component id="rasLabel" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="returnAlienRasLabel" min="-2" max="-2" attributes="0"/>
@@ -64,14 +59,15 @@
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="returnAlienIDLabel" min="-2" max="-2" attributes="0"/>
                           </Group>
-                      </Group>
-                      <EmptySpace pref="164" max="32767" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="ändraPlatsField" max="32767" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="ändraPlats" min="-2" pref="73" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="nuvarandePlatsLabel" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="returnAlienNuvPlatsLabel" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="rasLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="41" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="ändraAgentField" max="32767" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -93,6 +89,18 @@
                               <Component id="ändraReg" min="-2" pref="73" max="-2" attributes="0"/>
                           </Group>
                           <Component id="alienIDLabel1" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Group type="103" groupAlignment="1" attributes="0">
+                                  <Component id="ändraRasAntalArmBoog" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="ändraRasCB" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="ändraPlatsField" max="32767" attributes="0"/>
+                              </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="ändraPlats" min="-2" pref="73" max="-2" attributes="0"/>
+                                  <Component id="ändraRas" min="-2" pref="73" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -166,8 +174,15 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="rasLabel" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="returnAlienRasLabel" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ändraRasCB" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="ändraRas" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="ändraRasAntalArmBoog" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="rasLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="40" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -403,6 +418,44 @@
           <Font name="Segoe UI" size="14" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="ID kan ej redigeras."/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="&#xe4;ndraRasCB">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="3">
+            <StringItem index="0" value="Boglodite"/>
+            <StringItem index="1" value="Squid"/>
+            <StringItem index="2" value="Worm"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <Events>
+        <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="&#xe4;ndraRasCBItemStateChanged"/>
+      </Events>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+      </AuxValues>
+    </Component>
+    <Component class="javax.swing.JButton" name="&#xe4;ndraRas">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="&#xc4;ndra"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="&#xe4;ndraRasActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JTextField" name="&#xe4;ndraRasAntalArmBoog">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="&#xe4;ndraRasAntalArmBoogActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="rasLabel1">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="14" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Antal Armar/Boogies (Endast vid rasbyte):"/>
       </Properties>
     </Component>
   </SubComponents>
